turn alternate homepages into symlinks to cannonical homepages

--- a/casestudies/115/casestudy/www/layout/case_id_115_id_811.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_811.html
@@ -1,442 +1,1 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
-
-<style>
-#main .title
-{
-	color: ;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
-
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: ;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/115/180-02091_Banner Revise_JL_V1.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_115.html" title="Home"><span>Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_115_id_811.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_812.html">Introducción</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe— una breve historia</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_814.html">Baron: Un nuevo rostro</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_815.html">Nace una investigación</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_816.html">El Equipo Spotlight</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_817.html">El escenario nacional</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_818.html">La “ciudad más católica”</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_819.html">El Cardenal Law</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_820.html">El Diario y el Cardenal</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_821.html">El Globe y los católicos de Boston</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_822.html">El caso del padre Geoghan</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_823.html">Comenzar a escarbar</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_824.html">Organizar los archivos</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_825.html">Crece la base de datos </a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_826.html">Cuando la historia se torna personal</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_827.html">Reportear tu cultura</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_828.html">Potencial reacción</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_829.html">Rezendes recibe una pista</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_830.html">¿Publicar o hacer una pausa?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/115/Boston&#32;Globe&#32;y&#32;los&#32;Abusos&#32;Sexuales&#32;&#32;en&#32;la&#32;Iglesia&#32;Católica_wm&#32;.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_115.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-	<strong>RESUMEN</strong></p>
-<p>
-	<br />
-	CSJ-13-0050.0 Este caso es sobre el c&aacute;lculo que un medio de comunicaci&oacute;n debe hacer cuando descubre una historia que incrimina a la instituci&oacute;n m&aacute;s poderosa de su comunidad. Tambi&eacute;n describe el impacto personal sobre los periodistas de cubrir los il&iacute;citos de su propia iglesia. En agosto de 2001, el nuevo editor del Boston Globe, Martin Baron, le encarg&oacute; a la unidad de investigaci&oacute;n del diario, el Equipo Spotlight, que indagara sobre el caso del padre John Geoghan, un sacerdote cat&oacute;lico acusado de abusos sexuales contra menores. Dentro de un mes, el equipo hab&iacute;a comenzado a descubrir muchos otros casos de abusos cometidos por sacerdotes. La historia era potencialmente explosiva: Boston ten&iacute;a el m&aacute;s alto porcentaje de cat&oacute;licos de todas las grandes ciudades de Estados Unidos. La Arquidi&oacute;cesis y el Cardenal Law eran apreciados y respetados. El Globe y Law ten&iacute;an un historial de relaciones tensas. El equipo suspendi&oacute; su investigaci&oacute;n para cubrir los atentados del 11 de septiembre, pero la retom&oacute; en octubre. En la medida en que encajaban las piezas del tema, deb&iacute;an decidir c&oacute;mo abordar una historia que era, literalmente, incre&iacute;ble, c&oacute;mo manejar la posible reacci&oacute;n negativa de la comunidad y c&oacute;mo lidiar con la reacci&oacute;n que se esperaba de la Arquidi&oacute;cesis. En noviembre, obtuvo evidencia indesmentible: un documento que implicaba al Cardenal Law. El Globe, que quer&iacute;a asegurar que su impactante reportaje fuera infalible, no estaba totalmente preparado para publicarlo a&uacute;n, pero el documento era p&uacute;blico y otros periodistas podr&iacute;an encontrarlo. El equipo discuti&oacute; qu&eacute; hacer.<br />
-	Este caso ofrece a los alumnos la oportunidad de examinar los desaf&iacute;os especiales de cubrir el sector religi&oacute;n, particularmente la religi&oacute;n predominante de su propia comunidad. Se adentrar&aacute;n en c&oacute;mo los periodistas, a nivel personal, procesan y se enfrentan con una historia espantosa. Tambi&eacute;n explorar&aacute;n distintas t&eacute;cnicas de investigaci&oacute;n: el Globe debi&oacute; enfrentar la activa obstrucci&oacute;n de la Iglesia Cat&oacute;lica para obtener gran parte de su informaci&oacute;n. Los alumnos ser&aacute;n introducidos al Periodismo Asistido por Computadora, as&iacute; como al reporteo judicial. Abordar&aacute;n las presiones de la competencia de otros medios de comunicaci&oacute;n. Finalmente, los alumnos comprender&aacute;n la din&aacute;mica del periodismo en equipo y c&oacute;mo los miembros de un equipo trabajan juntos en funci&oacute;n de un tema demasiado grande para cualquiera de ellos a nivel individual.<br />
-	Este caso se puede utilizar en clases sobre la cobertura religiosa, el periodismo de investigaci&oacute;n o sobre la toma de decisiones editoriales.</p>
-<p>
-	Este caso fue escrito por David Mizner para Knight Case Studies Initiative, de la Escuela de Periodismo de la Universidad de Columbia, y supervisado por el profesor Ari Goldman. Fue financiado por John S. and James L. Knight Foundation. El banner fue producido por Columbia University Publications. Este caso fue traducido al espa&ntilde;ol por Pascale Bonnefoy, profesora del Instituto de la Comunicaci&oacute;n e Imagen, Universidad de Chile, en 2013. (0109)<br />
-	Copyright &copy; 2009 Consejo de Fiduciarios de la Universidad de Columbia en la ciudad de Nueva York. Ninguna parte de esta publicaci&oacute;n puede ser reproducida, revisada, traducida, almacenada en un sistema de recuperaci&oacute;n de datos, utilizada en una hoja de c&aacute;lculo, ni transmitida en cualquier forma o por cualquier medio (electr&oacute;nico, mec&aacute;nico, fotocopiado, grabado o cualquier otro) sin la autorizaci&oacute;n escrita de Case Studies Initiative.<br />
-	<br />
-	<span style="font-size:11px;">Para mayor informaci&oacute;n, por favor contactar:<br />
-	Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-	Tel: 212-854-8398; Fax: 212-854-7837<br />
-	Email: klundberg@columbia.edu<br />
-	Website: https://casestudies.jrn.columbia.edu<br />
-	<br />
-	Enviar consultas por correo a:<br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</span><br />
-	<br />
-	&nbsp;</p>
-</div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-<a href="case_id_115_id_812_pid_0.html" class="page-next" title="Go to next page">Introducción&#160;&#187;</a>
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_115_id_230_c_bio.html">Walter&nbsp;Robison</a></li>
-
-<li class="leaf"><a  href="case_id_115_id_231_c_bio.html">Michael&nbsp;Rezendes</a></li>
-
-<li class="leaf"><a  href="case_id_115_id_232_c_bio.html">Sacha&nbsp;Pfeiffer</a></li>
-
-<li class="leaf"><a  href="case_id_115_id_233_c_bio.html">Martin&nbsp;Baron</a></li>
-
-<li class="leaf"><a  href="case_id_115_id_234_c_bio.html">Ben &nbsp;Bradlee, Jr.</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8456305-3");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+./case_id_115.html
