--- a/casestudies/67/casestudy/www/layout/case_id_67_id_597.html
+++ b/casestudies/67/casestudy/www/layout/case_id_67_id_597.html
@@ -1,361 +1,1 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Buy It or Make It? The Charlotte Observer and the Associated Press | Buy It or Make It? The Charlotte Observer and the Associated Press
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
-
-<style>
-#main .title
-{
-	color: #007a43;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
-
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: #007a43;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/67/knightcase_banner_ap_observer.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_67.html" title="Home"><span>Buy It or Make It? The Charlotte Observer and the Associated Press</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_67_id_597.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_598.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_599.html">The AP and the <i>Observer</i></a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_601.html">Enter the Web</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_602.html">Skeptical</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_603.html">"Going Local"</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_604.html">AP Fights Back</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_605.html"><i>Observer</i> Reaction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_67_id_610.html"><i>Observer</i> Weighs Its Options</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/67/Associated&#32;Press&#32;and&#32;Lance&#32;Corporal&#32;Joshua&#32;Bernard_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_67.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">Buy It or Make It? The <i>Charlotte Observer</i> and the Associated Press</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-	<strong>Abstract </strong></p>
-<p>
-	<em>CSJ-11-0037.0</em> This case examines the dilemma faced by US newspapers as they make painful business choices that have a dramatic impact on the editorial product. In late 2009, the <em>Charlotte</em> (NC) <em>Observer</em> considered whether to end its 135-year relationship with the venerable and once-indispensable wire service, the Associated Press. On the one hand, the AP provided valuable sports, business, international, and national coverage which allowed the <em>Observer</em> to give its readers a comprehensive daily global news report. On the other hand, many readers now turned to the Internet for at least part of their newsfeed. The case traces the deliberations of <em>Observer</em> Editor Rick Thames and his leadership team. Was it still the <em>Observer</em>&rsquo;s obligation to cover the world? Could it still afford to do so? Could it afford not to? The AP, while member-owned, charged hefty user fees to cover its own considerable expenses. How should the <em>Observer</em> best spend those monies?</p>
-<p>
-	Use this case to spark discussion among students about the changing mission of both local newspapers and the Associated Press. How might their relationship endure? What are alternatives to the existing arrangement? Also ask students to look at the content-sharing plan the <em>Observer</em> concludes with its media neighbors. Does the plan make sense? Does it serve readers well? How about the watchdog role of media&mdash;will that suffer? Finally, use the case to probe beneath the surface of the deepening relationship between editorial and business. Is the crumbling divide between them a bad thing? What are the implications for journalists and for news consumers?</p>
-<p>
-	This case can be used in a class on local journalism; the business of media; strategic management; or editorial decisionmaking.</p>
-<div>
-	<em>This case has an Epilogue and a Teaching Note, visible to faculty after they register.</em></div>
-<p>
-	<strong>Credits</strong></p>
-<p>
-	<em>This case was written by Joseph E. <em>Williams for the Knight Case Studies Initiative, Graduate School of Journalism, Columbia University. The faculty sponsor was Dean of Academic Affairs William Grueskin. Funding was provided by the</em></em><em>Edward Klauber Seminar in Journalism Leadership</em><em>. (0311)</em></p>
-<div class="footnotesblock">
-	<p>
-		Copyright &copy; 2011 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</p>
-</div>
-<p>
-	&nbsp;</p>
-<div>
-	<strong>For further information, please contact:</strong></div>
-<div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div>
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-<a href="case_id_67_id_598_pid_0.html" class="page-next" title="Go to next page">Introduction&#160;&#187;</a>
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_67_id_162_c_bio.html">Cheryl&nbsp;Carpenter</a></li>
-
-<li class="leaf"><a  href="case_id_67_id_163_c_bio.html">Rick&nbsp;Thames</a></li>
-
-<li class="leaf"><a  href="case_id_67_id_164_c_bio.html">Steve&nbsp;Gunn</a></li>
-
-<li class="leaf"><a  href="case_id_67_id_165_c_bio.html">John&nbsp;Arwood</a></li>
-
-<li class="leaf"><a  href="case_id_67_id_166_c_bio.html">Rich&nbsp;Mathieson</a></li>
-
-<li class="leaf"><a  href="case_id_67_id_167_c_bio.html">Beth&nbsp;Grace</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8456305-3");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+./case_id_67.html
