--- a/casestudies/87/casestudy/www/layout/case_id_87_id_687.html
+++ b/casestudies/87/casestudy/www/layout/case_id_87_id_687.html
@@ -1,375 +1,1 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>When BEST Intentions Go Awry: Arsenic Mitigation in Bangladesh | When BEST Intentions Go Awry: Arsenic Mitigation in Bangladesh
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
-
-<style>
-#main .title
-{
-	color: ;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
-
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: ;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/87/180-01272_ArsenicMitagion.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_87.html" title="Home"><span>When BEST Intentions Go Awry: Arsenic Mitigation in Bangladesh</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_87_id_687.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_688.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_689.html">Unnoticed Geology, Unanticipated Consequences</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_690.html">Interested Parties</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_691.html">Scoping the Project</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_692.html">Starting HEALS</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_693.html">Observational Study Launches</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_694.html">Mitigation</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_695.html">Looking for BEST Treatment Options</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_696.html">BEST Intentions</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_87_id_697.html">Blindsided</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/87/When&#32;BEST&#32;intentions&#32;go&#32;awry_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_87.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">When BEST Intentions Go Awry: Arsenic Mitigation in Bangladesh</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-	<strong>ABSTRACT</strong></p>
-<p>
-	<span style="font-size:14px;"><em>MSPH-12-0003.0 </em>This case is about a public health response to the widespread arsenic contamination of groundwater in Bangladesh. It focuses on a Columbia University clinical trial of a potential treatment for arsenic poisoning. It presents for student consideration the challenges of conducting research in rural, less developed and culturally insular communities. It also raises the issue of aiding communities while studying them, which is complicated by funding restrictions and the possible skewing of results.</span></p>
-<p>
-	<span style="font-size:14px;">In 2007, a group of researchers from Columbia University and the University of Chicago began fieldwork for the Bangladesh Vitamin E and Selenium Trial (BEST) in Laksam, a rural, culturally conservative community southeast of the capital Dhaka. As part of the 10-year study, and to meet requirements to improve conditions for participants, the researchers distributed free water filters. Despite careful adherence to ethical guidelines and an exacting set of operating procedures, the BEST study ran into problems when a disgruntled former field worker&mdash;who sold the same type of water filter that BEST distributed&mdash;successfully persuaded the local press to write stories that accused the researchers of poisoning villagers.</span></p>
-<p>
-	<span style="font-size:14px;">Use the case to discuss international public health research, media management, or the logistics and ethics of conducting research on human subjects, particularly in geographically and culturally remote areas. What obligations do researchers have to participants and their communities? How can researchers working in developing countries navigate local conditions and deal with cultural, economic and political interests on the national and regional level? What additional training might help public health specialists and scientists work in these settings&mdash;crisis management, communications, etc?</span></p>
-<p>
-	<span style="font-size:14px;">This case is suitable for courses or classes about international public health research, human subject research, or crisis management.</span></p>
-<div>
-	<em>This case has an Epilogue and a Teaching Note, visible to faculty after they register.</em></div>
-<p>
-	<strong>Credits:</strong></p>
-<p>
-	<span style="font-size:14px;"><em>This case was written by Ted Smalley Bowen and Kirsten Lundberg, Director, for the Case Consortium @ Columbia. (0612)</em></span></p>
-<p>
-	Copyright &copy; 2013 The Mailman School of Public Health and Columbia University. All Rights Reserved.</p>
-<p>
-	<strong>For further information, please contact:</strong></p>
-<div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div>
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-<a href="case_id_87_id_688_pid_0.html" class="page-next" title="Go to next page">Introduction&#160;&#187;</a>
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_87_id_201_c_bio.html">Dr. Habibul&nbsp;Ahsan</a></li>
-
-<li class="leaf"><a  href="case_id_87_id_202_c_bio.html">Faruque&nbsp;Parvez</a></li>
-
-<li class="leaf"><a  href="case_id_87_id_203_c_bio.html">Dr. Joseph&nbsp;Graziano</a></li>
-
-<li class="leaf"><a  href="case_id_87_id_204_c_bio.html">Alexander&nbsp;van Geen </a></li>
-
-<li class="leaf"><a  href="case_id_87_id_205_c_bio.html">Dr. Tariqul&nbsp;Islam</a></li>
-
-<li class="leaf"><a  href="case_id_87_id_206_c_bio.html">Dr. Ahmed&nbsp;Talat Haider</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8456305-3");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+./case_id_87.html
