--- a/casestudies/106/casestudy/www/layout/case_id_106_id_728.html
+++ b/casestudies/106/casestudy/www/layout/case_id_106_id_728.html
@@ -1,259 +1,1 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Words of the Dying: CHCH TV and Constable Garrett Styles | Words of the Dying: CHCH TV and Constable Garrett Styles
-	- A Journalism Case Study
-
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
-
-<style>
-#main .title
-{
-	color: ;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
-
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: ;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/106/CaseConsortiumv3.jpeg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_106.html" title="Home"><span>Words of the Dying: CHCH TV and Constable Garrett Styles</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_106_id_728.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/106/CHCH&#32;Styles.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_106.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">Words of the Dying: CHCH TV and Constable Garrett Styles</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-	<strong>ABSTRACT</strong></p>
-<p>
-	<em>CSJ-12-0045.0CC</em> This contributed case examines whether CHCH TV (outside Toronto) should broadcast the dying words of a police officer whose last thoughts were for the welfare of the teenagers who had dragged him to his death. The case counterposes concern for the privacy of the family/individual against the public&rsquo;s interest in the officer, Constable Garrett Styles.</p>
-<p>
-	Students will have a chance to discuss what constitutes public interest. Constable Styles&rsquo; final words were captured by a website that monitors police radio channels; they were already in the public domain. His actions reflected a selflessness that was exemplary. But neither he nor the police dispatcher had given consent for their words to be broadcast. On the other hand, the story of his death had attracted considerable public attention in the CHCH viewing area, and the recording contributed significantly to the full picture of this heroic public protector.</p>
-<p>
-	Students will be put in the shoes of Producer Debbie Walker as she confronts a decision in the final minutes of the evening news program about whether or not to use the tape.</p>
-<p>
-	This case is suitable for a course/class about ethics; editorial decisionmaking; or local reporting.</p>
-<div>
-	<em>This case has an Epilogue visible to faculty after they register. There is no Teaching Note for this case.</em></div>
-<p>
-	<span style="font-size:11px;"><strong>Credits:</strong>&nbsp;<em>This case was written by Carly Conway, Carly Lewis, Sarah Ratchford and Manori Ravindran of Ryerson University under the guidance of Kirsten Lundberg, Director, for the Case Consortium @ Columbia.&nbsp;The faculty sponsor was Professor Ivor Shapiro, Chair, School of Journalism, Faculty of Communication and Design, Ryerson University.&nbsp;(1012)</em></span></p>
-<p>
-	<span style="font-size:11px;">Copyright &copy; 2012 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</span></p>
-		<p><strong>For further information:</strong></p>
-<div>
-	Email: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/">https://casestudies.ccnmtl.columbia.edu</a></div>
-</div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8456305-3");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+./case_id_106.html
